--- a/xx2parser/vc2parser/vc2parser.csproj
+++ b/xx2parser/vc2parser/vc2parser.csproj
@@ -47,8 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="vc2parser.cs" />
+    <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="vc2parser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
